# src/app/api/collections/projects/route.ts
@@ -1,11 +1,6 @@
 import { ELECTRIC_PROTOCOL_QUERY_PARAMS } from "@electric-sql/client";
-import { Pool } from "@neondatabase/serverless";
-import { sql } from "drizzle-orm";
-import { drizzle } from "drizzle-orm/neon-serverless";
-import { revalidatePath } from "next/cache";
 import { z } from "zod";
 import { PROJECT_TABLE } from "@/db";
-import * as schema from "@/db/schema";
 import { ELECTRIC_URL } from "@/lib/electric";
 
 export const preferredRegion = "iad1";
@@ -64,64 +59,4 @@ export async function GET(request: Request) {
     statusText: response.statusText,
     headers,
   });
-}
-
-export async function POST(request: Request) {
-  let pool: Pool | undefined;
-  try {
-    const json = await request.json();
-
-    const { id, name, description } = schema.ProjectInsertSchema.parse(json);
-
-    if (!process.env.DATABASE_URL) {
-      return Response.json(
-        { success: false, error: "DATABASE_URL is not set" },
-        { status: 500 },
-      );
-    }
-    pool = new Pool({
-      connectionString: process.env.DATABASE_URL?.replace("-pooler", ""),
-    });
-
-    const db = drizzle({
-      client: pool,
-      schema,
-    });
-
-    const result = await db.transaction(async (tx) => {
-      await tx.insert(schema.Project).values({
-        id,
-        name,
-        description,
-      });
-
-      const txid = await tx.execute(
-        sql`SELECT pg_current_xact_id()::xid::text as txid`,
-      );
-
-      return {
-        txid: txid.rows[0].txid as string,
-      };
-    });
-
-    await pool.end();
-
-    revalidatePath("/projects");
-
-    return Response.json(
-      { success: true, txid: parseInt(result.txid, 10) },
-      { status: 200 },
-    );
-  } catch (error) {
-    if (pool) {
-      await pool.end();
-    }
-    return Response.json(
-      {
-        success: false,
-        error: error instanceof Error ? error.message : "Unknown error",
-      },
-      { status: 500 },
-    );
-  }
 }
